Fix disabled search input overflow

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -327,6 +327,10 @@ table {
     }
   }
 
+  input[type=search] {
+    height: auto;
+  }
+
   .dropdown-toggle {
     border-radius: 0 !important;
     max-height: 29px;
